# dolphin

./: .clangd  .dockerignore  .gitignore  .gitmodules  AGENTS.md  BUILD_AND_DEPLOYMENT_ANALYSIS.md  CMakeLists.txt  CUDA_DEBUG_GUIDE.md  DOCKER.sh  Dockerfile  Dockerfile.builder  Dockerfile.cpu  Dockerfile.cpu.builder  LICENSE  NOTED.md  NOTES.md  README.md  README_dev.md  TODO.md  add_license.sh  bak.sh  callgrind.out.31944  callgrind.out.35035  callgrind.out.35161  callgrind.out.35290  dolphin_architecture_analysis.md  enhanced_cuda_debug.sh  fmt.text  imgui.ini  launch.json  profile_run_v1.nsys-rep  psf_refactoring_plan.md  spdlog.sh  speed.txt  temp.cpp  test  test.cpp  uml.puml  uml2.puml  uml3.puml  (+2 more)
backends/cpu/: CMakeLists.txt  CPUBackend.cpp  CPUBackend.h
backends/cpu/cmake/: cpu_backendConfig.cmake.in  cpu_deviceConfig.cmake.in
backends/cpu/include/cpu_backend/: CPUBackend.h  CPUBackendManager.h
backends/cpu/src/: CPUBackend.cpp  CPUBackendManager.cpp
backends/cpu/tests/: CMakeLists.txt  README_fftw_size_decomposition.md  fftw_multithreading_test.cpp  fftw_size_decomposition_test.cpp  multiple_devices_test.cpp  real_complex_fftw.cpp  test.cpp  test_clone_shared_memory.cpp  test_concurrent_backends.cpp  test_cpu_backend.cpp  test_different_thread_configs.cpp  test_independent_fft.cpp  test_move_data_between_backends.cpp  test_multiple_backends.cpp  test_shared_memory_tracking.cpp
backends/cuda/: CMakeLists.txt  CUDABackend.cpp  CUDABackend.h  CUDABackendManager.cpp  CUDABackendManager.h  DOCKER.sh  Dockerfile  mybinary
backends/cuda/dockerbuild/: Makefile
backends/cuda/dockerbuild/tests/: cuda_test  multiple_devices_test
backends/cuda/include/: CUDABackend.h  CUDABackendManager.h  CUDAErrorUtils.h
backends/cuda/include/cuda_backend/: CUDABackend.h  CUDABackendManager.h  CUDAErrorUtils.h
backends/cuda/lib/cube/: CMakeLists.txt  README.md
backends/cuda/src/: CUDABackend.cpp  CUDABackend.cpp.bak  CUDABackendManager.cpp  CUDABackendManager.cpp.bak
backends/cuda/tests/: CMakeLists.txt  README_cufft_vs_fftw.md  cuda_test.cpp  multiple_devices_test.cpp  test.cpp  test_cuda_backend.cpp
backends/dolphinbackend/: CMakeLists.txt
backends/dolphinbackend/cmake/: dolphinbackendConfig.cmake.in  dolphindeviceConfig.cmake.in
backends/dolphinbackend/include/dolphinbackend/: ComplexData.h  CuboidShape.h  Exceptions.h  IBackend.h  IBackendManager.h  IBackendMemoryManager.h  IComputeBackend.h  IDeconvolutionBackend.h
backends/dolphinbackend/src/: ComplexData.cpp  DefaultBackendMemoryManager.cpp  IBackendMemoryManager.cpp
backends/openmp/: CMakeLists.txt  OpenMPBackend.cpp  OpenMPBackend.h  OpenMPDevice.cpp
backends/openmp/include/openmp_backend/: OpenMPBackend.h
backends/openmp/src/: OpenMPBackend.cpp
benchmarks/: CMakeLists.txt
benchmarks/cpu/: tiff_parallel_read_benchmark.cpp
dolphin_image/: CMakeLists.txt
dolphin_image/include/dolphin/: HelperClasses.h  Image3D.h
dolphin_image/include/dolphin/IO/: ReaderWriter.h  TiffReaderWriterPair.h  TiffWriter.h
dolphin_image/include/dolphin/Types/: BoxCoord.h  Range.h
dolphin_image/include/dolphin_image/: HelperClasses.h  Image3D.h  ImageMetaData.h  ImageOperations.h  ImagePadding.h
dolphin_image/include/dolphin_image/IO/: ReaderThreadPool.h  ReaderWriter.h  TiffExceptions.h  TiffHandlePool.h  (+3 more)
dolphin_image/src/: Image3D.cpp  ImageMetaData.cpp  ImageOperations.cpp  ImagePadding.cpp  TiffReader.cpp  TiffReaderWriterPair.cpp  TiffWriter.cpp
frontends/cli/: CMakeLists.txt  DOCKER.sh  Dockerfile  Dockerfile.builder
frontends/cli/include/: CLIFrontend.h
frontends/cli/src/: CLIFrontend.cpp  main.cpp
frontends/gui/: CMakeLists.txt
frontends/gui/include/: DefaultGUIStyleConfig.h  GUIFrontend.h  GUIStyleConfig.h
frontends/gui/src/: DefaultGUIStyleConfig.cpp  GUIFrontend.cpp  imguiWidget.cpp  main.cpp
lib/cube/: CMakeLists.txt  LICENSE  README.md
lib/cube/include/: CUBE.h  kernels.h  operations.h  utl.h
lib/cube/src/: main.cpp  operations.cu  utl.cu
tests/: CMakeLists.txt  README_fftw_multithreading.md  cpu_data_reinterpret_test.cpp  cufft_vs_fftw_comparison.cpp  feathering_test.cpp  fft_real_vs_complex_test.cpp  fftw_inplace_vs_outofplace_r2c_test.cpp  fftw_multithreading_test.cpp  fftw_size_decomposition_test.cpp  getLabelGroups_test.cpp  imageSplit_test.cpp  image_comparison_test.cpp  main.cpp  memory_exception_example.cpp  mirror_padding_test.cpp  padding_test.cpp  read_write_test.cpp  real_complex_fftw.cpp  speed.txt  tiff_generation_test.cpp
tests/IO/: CMakeLists.txt  mirror_padding_test.cpp  read_write_test.cpp  tiff_generation_test.cpp  tiff_reader_test.cpp
tests/backends/: CMakeLists.txt  CUDABackendManager_example.cpp  README.md  cpu_test.cpp  cuda_test.cpp  fft_backend_test.cpp  fft_performance_test.cpp  independent_fft_test.cpp  openmp_test.cpp
tests/backends/cpu/: cpu_data_reinterpret_test.cpp  fft_performance_test.cpp  fft_real_vs_complex_test.cpp  fftw_inplace_vs_outofplace_r2c_test.cpp
tests/backends/dolphinbackend/: memory_exception_example.cpp
tests/cubeShapeTest/: CMakeLists.txt  cubeShapeTest.cpp
tests/deconvolution/: CMakeLists.txt  feathering_test.cpp  padding_test.cpp
tests/deconvolution/deconvolutionStrategies/: CMakeLists.txt  getLabelGroups_test.cpp  imageSplit_test.cpp  memory_test.cpp
tests/image/: CMakeLists.txt  image_comparison_test.cpp
tests/integration/: CMakeLists.txt  cubeShapeTest.cpp  e2e_deconvolution_test.cpp  main_integration_test.cpp
tests/labeledImage/: labeled_image_test.cpp  labeled_image_test.json  tiff_generation_test.cpp
tests/labeledImage/test_tiff_output/: constant_direct_1.tif  constant_hyperstack_0.tif  constant_hyperstack_1.tif
tests/mainTest/: CMakeLists.txt  main_test.cpp
tests/unit/: CMakeLists.txt  test_algorithm_factory.cpp  test_algorithms.cpp  test_backend_factory.cpp  test_boxcoord.cpp  test_config.cpp  test_cuboid_shape.cpp  test_image3d.cpp  test_image_operations.cpp  test_image_padding.cpp  test_preprocessor.cpp  test_psf_generator.cpp  test_range_map.cpp  test_threadpool.cpp
tests/utils/: TestUtils.h
(+716 files in other folders)
